--- a/style.css
+++ b/style.css
@@ -263,14 +263,23 @@ a{
     grid-column: 1 / -1;
     margin-bottom: 2rem
 }
-
+.group-0
+{
+    max-width: 700px;
+    width: 100%;
+    margin: 0 auto;
+    grid-column: 1/-1;
+    display: flex;
+    flex-direction: row;
+    gap: 5rem;
+    justify-content: center;
+}
 .group-1,
 .group-2 {
     display: flex;
     flex-direction: column;
     gap: 5rem;
 }
-
 .group-3 {
     max-width: 700px;
     width: 100%;
@@ -326,13 +335,6 @@ a{
     font-size: 1.5rem;
     font-weight: 400;
     text-transform: uppercase;
-}
-
-.downloadBtn {
-    display: block;
-    text-decoration: underline;
-    font-size: 1.6rem;
-    margin-top: 1rem;
 }
 
 .downloadBtn:hover {
@@ -391,11 +393,20 @@ a{
     justify-content: flex-start;
     color: var(--text-color);
 }
-
+.portfolio_item {
+    margin-top: -1rem;
+    font-size: 2rem;
+    display: flex;
+    gap: .5rem;
+    align-items: center;
+    justify-content: flex-start;
+    color: white;
+}
+.portfolio_item:hover,
 .social_item:hover {
     color: var(--primary-color);
 }
-
+.portfolio_item svg,
 .social_item svg {
     width: 2rem;
 }
