--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-
 * {
     padding: 0;
     margin: 0;
@@ -74,7 +73,7 @@ img {
     animation: right 40s .5s infinite;
 }
 
-nav {
+nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -84,7 +83,7 @@ nav {
     color: #fff;
 }
 
-.nav-list {
+.nav-list{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -156,7 +155,6 @@ nav {
 }
 
 @keyframes down {
-
     0%,
     100% {
         top: -100px;
@@ -168,7 +166,6 @@ nav {
 }
 
 @keyframes up {
-
     0%,
     100% {
         bottom: -100px;
@@ -180,7 +177,6 @@ nav {
 }
 
 @keyframes left {
-
     0%,
     100% {
         left: -100px;
@@ -204,7 +200,7 @@ nav {
 }
 
 /* common styles */
-a {
+a{
     text-decoration: none;
     color: white;
 }
@@ -267,14 +263,23 @@ a {
     grid-column: 1 / -1;
     margin-bottom: 2rem
 }
-
+.group-0
+{
+    max-width: 700px;
+    width: 100%;
+    margin: 0 auto;
+    grid-column: 1/-1;
+    display: flex;
+    flex-direction: row;
+    gap: 5rem;
+    justify-content: center;
+}
 .group-1,
 .group-2 {
     display: flex;
     flex-direction: column;
     gap: 5rem;
 }
-
 .group-3 {
     max-width: 700px;
     width: 100%;
@@ -330,13 +335,6 @@ a {
     font-size: 1.5rem;
     font-weight: 400;
     text-transform: uppercase;
-}
-
-.downloadBtn {
-    display: block;
-    text-decoration: underline;
-    font-size: 1.6rem;
-    margin-top: 1rem;
 }
 
 .downloadBtn:hover {
@@ -395,11 +393,20 @@ a {
     justify-content: flex-start;
     color: var(--text-color);
 }
-
+.portfolio_item {
+    margin-top: -1rem;
+    font-size: 2rem;
+    display: flex;
+    gap: .5rem;
+    align-items: center;
+    justify-content: flex-start;
+    color: white;
+}
+.portfolio_item:hover,
 .social_item:hover {
     color: var(--primary-color);
 }
-
+.portfolio_item svg,
 .social_item svg {
     width: 2rem;
 }
