--- a/style.css
+++ b/style.css
@@ -434,6 +434,17 @@ hr {
     border-top: 2px solid rgba(255, 255, 255, 0.229);
 }
 
+.icon {
+    width: 16px;
+    /* Adjust the size as needed */
+    height: 16px;
+    /* Adjust the size as needed */
+    vertical-align: middle;
+    /* Aligns the icon with the text */
+    margin-right: 5px;
+    /* Adds some space between the icon and the text */
+}
+
 @media only screen and (max-width: 768px) {
     hr {
         margin: 0 auto;
